# CFRL

./: .gitignore  LICENSE  README.md  problems.txt  pyproject.toml  scratch_paper.ipynb  to_clarify.txt  to_do.txt
.github/workflows/: draft-pf.yml
CFRL/: agents.py  environment.py  evaluation.py  fqe.py  preprocessor.py  reader.py
CFRL/utils/: base_models.py  custom_errors.py
JOSS/: paper.bib  paper.md
data/: impute_data.csv  sample_data.csv  sample_data_large_multi.csv  sample_data_large_multi_2.csv  sample_data_large_uni.csv
docs/source/: conf.py  index.rst
docs/source/about_cfrl/: index.rst  release_notes.rst  (+1 more)
examples/: baseline_agents.py  baseline_preprocessors.py  policy_learning_only_workflow.ipynb  preprocessing_only_workflow.ipynb  preprocessing_policy_learning_workflow.ipynb  rda_powered.py  real_data_workflow.ipynb  simulation.py  synthetic_data_workflow.ipynb
examples/workflow_computing_times/: out_policy_learning_only.csv  out_policy_learning_only_workflow.csv  out_preprocessing_only_workflow.csv  out_preprocessing_policy_learning_workflow.csv  out_real_data_workflow.csv  out_synthetic_data_workflow.csv  temporary_sample_data.csv  time_analysis.ipynb  time_policy_learning_only_workflow.py  time_preprocessing_only_workflow.py  time_preprocessing_policy_learning_workflow.py  time_real_data_workflow.py  time_synthetic_data_workflow.py
package/: agents.py  environment.py  evaluation.py  fqe.py  preprocessor.py  reader.py
package/utils/: base_models.py
pycfrl/: reader.py  requirements.txt
pycfrl/olds/: agents_20250830.py  agents_old.py  base_models_20250830.py  base_models_20250905.py  base_models_old.py  environment_20250905.py  environment_old.py  evaluation_20250905.py  evaluation_old.py  fqe_old.py  preprocessor_old.py
tests/: test_agents.py  test_evaluation.py  test_fqe.py  test_preprocessor_cf1.py  test_preprocessor_cf1_lm.py  test_preprocessor_cf1_nn.py  test_preprocessor_cf3.py  test_preprocessor_cf3_lm.py  test_preprocessor_cf3_nn.py  test_reader.py  test_real_data_analysis_integration.py  test_simulated_env.py  test_simulated_env_lm.py  test_simulated_env_nn.py  test_simulation_integration.py  test_synthetic_env.py
tests/sample_inputs/: sample_input_1.csv  sample_input_2.csv  sample_input_3.csv  sample_input_4.csv
(+24 files in other folders)
